Rationalise use of Joda, replacing with java.time