@@ -17,7 +17,6 @@ package com.thoughtworks.go.agent.service;
 
 import com.thoughtworks.go.agent.common.ssl.GoAgentServerHttpClient;
 import com.thoughtworks.go.config.AgentRegistry;
-import org.apache.commons.io.IOUtils;
 import org.apache.http.client.methods.CloseableHttpResponse;
 import org.apache.http.client.methods.HttpRequestBase;
 import org.apache.http.client.methods.RequestBuilder;
@@ -71,7 +70,7 @@ public class TokenRequester {
 
     private String responseBody(CloseableHttpResponse response) {
         try (InputStream is = response.getEntity() == null ? InputStream.nullInputStream() : response.getEntity().getContent()) {
-            return IOUtils.toString(is, StandardCharsets.UTF_8);
+            return new String(is.readAllBytes(), StandardCharsets.UTF_8);
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
