@@ -40,9 +40,6 @@ import org.apache.commons.io.FileUtils;
 import org.apache.commons.io.FilenameUtils;
 import org.apache.commons.io.filefilter.NameFileFilter;
 import org.apache.commons.io.filefilter.TrueFileFilter;
-import org.joda.time.DateTime;
-import org.joda.time.format.DateTimeFormatter;
-import org.joda.time.format.ISODateTimeFormat;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -54,8 +51,11 @@ import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 
 import java.io.*;
+import java.nio.file.Files;
 import java.nio.file.Path;
+import java.time.LocalDateTime;
 import java.util.ArrayList;
+import java.util.Date;
 import java.util.List;
 import java.util.Optional;
 import java.util.concurrent.Semaphore;
@@ -114,9 +114,9 @@ public class BackupServiceIntegrationTest {
         cleanupBackups();
         originalCipher = new DESCipherProvider(systemEnvironment).getKey();
 
-        FileUtils.writeStringToFile(new File(systemEnvironment.getConfigDir(), "cruise-config.xml"), "invalid crapy config", UTF_8);
-        FileUtils.writeStringToFile(new File(systemEnvironment.getConfigDir(), "cipher"), "invalid crapy cipher", UTF_8);
-        FileUtils.writeStringToFile(new File(systemEnvironment.getConfigDir(), "cipher.aes"), "invalid crapy cipher", UTF_8);
+        Files.writeString(new File(systemEnvironment.getConfigDir(), "cruise-config.xml").toPath(), "invalid crapy config", UTF_8);
+        Files.writeString(new File(systemEnvironment.getConfigDir(), "cipher").toPath(), "invalid crapy cipher", UTF_8);
+        Files.writeString(new File(systemEnvironment.getConfigDir(), "cipher.aes").toPath(), "invalid crapy cipher", UTF_8);
 
         systemEnvSpy = spy(systemEnvironment);
         when(systemEnvSpy.wrapperConfigDirPath()).thenReturn(Optional.of(WRAPPER_CONFIG_DIR));
@@ -128,8 +128,8 @@ public class BackupServiceIntegrationTest {
     public void tearDown() throws Exception {
         dbHelper.onTearDown();
         cleanupBackups();
-        FileUtils.writeStringToFile(new File(systemEnvironment.getConfigDir(), "cruise-config.xml"), goConfigService.xml(), UTF_8);
-        FileUtils.writeByteArrayToFile(systemEnvironment.getDESCipherFile(), originalCipher);
+        Files.writeString(new File(systemEnvironment.getConfigDir(), "cruise-config.xml").toPath(), goConfigService.xml(), UTF_8);
+        Files.write(systemEnvironment.getDESCipherFile().toPath(), originalCipher);
         configHelper.onTearDown();
     }
 
@@ -226,13 +226,10 @@ public class BackupServiceIntegrationTest {
         List<Modification> modifications = git.latestModification(cloneDir, subprocessExecutionContext);
         String latestChangeRev = modifications.get(0).getRevision();
         git.checkout(cloneDir, new StringRevision(latestChangeRev), subprocessExecutionContext);
-        assertThat(FileUtils.readFileToString(new File(cloneDir, "cruise-config.xml"), UTF_8).indexOf("too-unique-to-be-present")).isGreaterThan(0);
+        assertThat(Files.readString(new File(cloneDir, "cruise-config.xml").toPath(), UTF_8).indexOf("too-unique-to-be-present")).isGreaterThan(0);
         StringRevision revision = new StringRevision(latestChangeRev + "~1");
         git.updateTo(new InMemoryStreamConsumer(), cloneDir, new RevisionContext(revision), subprocessExecutionContext);
-        assertThat(FileUtils.readFileToString(new File(cloneDir, "cruise-config.xml"), UTF_8).indexOf("too-unique-to-be-present")).isEqualTo(-1);
-
-        // Workaround issue with deletion of symlinks via JUnit TempDir by pre-deleting
-        FileUtils.deleteQuietly(cloneDir);
+        assertThat(Files.readString(new File(cloneDir, "cruise-config.xml").toPath(), UTF_8).indexOf("too-unique-to-be-present")).isEqualTo(-1);
     }
 
     @Test
@@ -243,7 +240,7 @@ public class BackupServiceIntegrationTest {
         assertThat(backup.getMessage()).isEqualTo("Backup was generated successfully.");
 
         File version = backedUpFile("version.txt");
-        assertThat(FileUtils.readFileToString(version, UTF_8)).isEqualTo(CurrentGoCDVersion.getInstance().formatted());
+        assertThat(Files.readString(version.toPath(), UTF_8)).isEqualTo(CurrentGoCDVersion.getInstance().formatted());
     }
 
     @Test
@@ -258,15 +255,17 @@ public class BackupServiceIntegrationTest {
         when(configService.isUserAdmin(admin)).thenReturn(true);
 
         TimeProvider timeProvider = mock(TimeProvider.class);
-        DateTime now = new DateTime();
-        when(timeProvider.currentDateTime()).thenReturn(now);
+        LocalDateTime now = LocalDateTime.of(2023, 10, 1, 12, 0, 4, 5600);
+        when(timeProvider.currentLocalDateTime()).thenReturn(now);
 
         BackupService service = new BackupService(artifactsDirHolder, configService, timeProvider, backupInfoRepository, systemEnvSpy, configRepository,
                 databaseStrategy, null);
         service.startBackup(admin);
 
         String ipAddress = SystemUtil.getFirstLocalNonLoopbackIpAddress();
-        String body = String.format("Backup of the Go server at '%s' was successfully completed. The backup is stored at location: %s. This backup was triggered by 'admin'.", ipAddress, backupDir(now).getAbsolutePath());
+        String body = String.format("Backup of the Go server at '%s' was successfully completed. The backup is stored at location: %s. This backup was triggered by 'admin'.",
+            ipAddress,
+            new File(backupsDirectory, BackupService.BACKUP + "20231001-120004").getAbsolutePath());
 
         verify(goMailSender).send(new SendEmailMessage("Server Backup Completed Successfully", body, "mail@admin.com"));
         verifyNoMoreInteractions(goMailSender);
@@ -284,8 +283,8 @@ public class BackupServiceIntegrationTest {
         when(configService.isUserAdmin(admin)).thenReturn(true);
 
         TimeProvider timeProvider = mock(TimeProvider.class);
-        DateTime now = new DateTime();
-        when(timeProvider.currentDateTime()).thenReturn(now);
+        LocalDateTime now = LocalDateTime.now();
+        when(timeProvider.currentLocalDateTime()).thenReturn(now);
 
         BackupService service = new BackupService(artifactsDirHolder, configService, timeProvider, backupInfoRepository, systemEnvSpy, configRepository,
                 databaseStrategy, null);
@@ -306,9 +305,9 @@ public class BackupServiceIntegrationTest {
         when(configService.getMailSender()).thenReturn(goMailSender);
         when(configService.isUserAdmin(admin)).thenReturn(true);
 
-        DateTime now = new DateTime();
         TimeProvider timeProvider = mock(TimeProvider.class);
-        when(timeProvider.currentDateTime()).thenReturn(now);
+        LocalDateTime now = LocalDateTime.now();
+        when(timeProvider.currentLocalDateTime()).thenReturn(now);
 
         Database databaseStrategyMock = mock(Database.class);
         doThrow(new RuntimeException("Oh no!")).when(databaseStrategyMock).backup(any(File.class));
@@ -339,9 +338,9 @@ public class BackupServiceIntegrationTest {
         when(configService.getMailSender()).thenReturn(goMailSender);
         when(configService.isUserAdmin(admin)).thenReturn(true);
 
-        DateTime now = new DateTime();
         TimeProvider timeProvider = mock(TimeProvider.class);
-        when(timeProvider.currentDateTime()).thenReturn(now);
+        LocalDateTime now = LocalDateTime.now();
+        when(timeProvider.currentLocalDateTime()).thenReturn(now);
 
         Database databaseStrategyMock = mock(Database.class);
         doThrow(new RuntimeException("Oh no!")).when(databaseStrategyMock).backup(any(File.class));
@@ -392,14 +391,16 @@ public class BackupServiceIntegrationTest {
 
         backupThd.start();
         waitForBackupToStart.acquire();
-        String backupStartedTimeString = backupService.backupRunningSinceISO8601().get();
-        DateTimeFormatter dateTimeFormatter = ISODateTimeFormat.dateTime();
-        DateTime backupTime = dateTimeFormatter.parseDateTime(backupStartedTimeString);
+        try {
+            String backupStartedTimeString = backupService.backupRunningSinceISO8601().get();
+            Date backupTime = Dates.parseIso8601CompactOffset(backupStartedTimeString);
 
-        ServerBackup runningBackup = ReflectionUtil.getField(backupService, "runningBackup");
-        assertThat(new DateTime(runningBackup.getTime())).isEqualTo(backupTime);
-        waitForAssertionToCompleteWhileBackupIsOn.release();
-        backupThd.join();
+            ServerBackup runningBackup = ReflectionUtil.getField(backupService, "runningBackup");
+            assertThat(runningBackup.getTime()).isCloseTo(backupTime, 1000L); // No millis in format
+        } finally {
+            waitForAssertionToCompleteWhileBackupIsOn.release();
+            backupThd.join();
+        }
     }
 
     @Test
@@ -459,8 +460,8 @@ public class BackupServiceIntegrationTest {
         when(configService.adminEmail()).thenReturn("mail@admin.com");
         when(configService.isUserAdmin(admin)).thenReturn(true);
         TimeProvider timeProvider = mock(TimeProvider.class);
-        DateTime now = new DateTime();
-        when(timeProvider.currentDateTime()).thenReturn(now);
+        LocalDateTime now = LocalDateTime.now();
+        when(timeProvider.currentLocalDateTime()).thenReturn(now);
 
         final MessageCollectingBackupUpdateListener backupUpdateListener = new MessageCollectingBackupUpdateListener(waitForBackupToComplete);
 
@@ -488,8 +489,8 @@ public class BackupServiceIntegrationTest {
         when(configService.adminEmail()).thenReturn("mail@admin.com");
         when(configService.isUserAdmin(admin)).thenReturn(true);
         TimeProvider timeProvider = mock(TimeProvider.class);
-        DateTime now = new DateTime();
-        when(timeProvider.currentDateTime()).thenReturn(now);
+        LocalDateTime now = LocalDateTime.now();
+        when(timeProvider.currentLocalDateTime()).thenReturn(now);
 
         final MessageCollectingBackupUpdateListener backupUpdateListener = new MessageCollectingBackupUpdateListener(waitForBackupToComplete);
 
@@ -516,8 +517,8 @@ public class BackupServiceIntegrationTest {
         when(configService.isUserAdmin(admin)).thenReturn(true);
 
         TimeProvider timeProvider = mock(TimeProvider.class);
-        DateTime now = new DateTime();
-        when(timeProvider.currentDateTime()).thenReturn(now);
+        LocalDateTime now = LocalDateTime.now();
+        when(timeProvider.currentLocalDateTime()).thenReturn(now);
 
         BackupService service = new BackupService(artifactsDirHolder, configService, timeProvider, backupInfoRepository, systemEnvSpy, configRepository,
                 databaseStrategy, null);
@@ -527,17 +528,17 @@ public class BackupServiceIntegrationTest {
         assertThat(backup.getMessage()).isEqualTo("Post backup script exited with an error, check the server log for details.");
     }
 
-    private void deleteWrapperConfigFileIfExists(String ...fileNames) {
+    private void deleteWrapperConfigFileIfExists(String ...fileNames) throws IOException {
         for (String fileName : fileNames) {
             FileUtils.deleteQuietly(new File(WRAPPER_CONFIG_DIR, fileName));
         }
     }
 
     private boolean fileExists(String fileName) {
-        return !FileUtils.listFiles(backupsDirectory, new NameFileFilter(fileName), TrueFileFilter.TRUE).isEmpty();
+        return new File(backupsDirectory, fileName).exists();
     }
 
-    private void deleteConfigFileIfExists(String ...fileNames) {
+    private void deleteConfigFileIfExists(String ...fileNames) throws IOException {
         for (String fileName : fileNames) {
             FileUtils.deleteQuietly(new File(configDir(), fileName));
         }
@@ -620,10 +621,6 @@ public class BackupServiceIntegrationTest {
 
     private File configDir() {
         return new File(new SystemEnvironment().getConfigDir());
-    }
-
-    private File backupDir(DateTime now) {
-        return new File(backupsDirectory, BackupService.BACKUP + now.toString("YYYYMMdd-HHmmss"));
     }
 
     private File backedUpFile(final String filename) {
