@@ -15,12 +15,12 @@
  */
 package com.thoughtworks.go.spark;
 
-import org.apache.commons.io.IOUtils;
 import org.apache.commons.text.StringEscapeUtils;
 
 import java.io.IOException;
 import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
+import java.util.Objects;
 
 import static java.lang.String.valueOf;
 
@@ -40,8 +40,8 @@ public abstract class HtmlErrorPage {
         private static final String INSTANCE = fileContents();
 
         private static String fileContents() {
-            try (InputStream in = Holder.class.getResourceAsStream("/error.html")) {
-                return IOUtils.toString(in, StandardCharsets.UTF_8);
+            try (InputStream in = Objects.requireNonNull(Holder.class.getResourceAsStream("/error.html"))) {
+                return new String(in.readAllBytes(), StandardCharsets.UTF_8);
             } catch (IOException e) {
                 throw new RuntimeException(e);
             }
